# research-radar

./: .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  app.py  config.json  pyproject.toml  requirements-ui.txt  requirements.txt
.github/workflows/: ci.yml
data/: build_cache.py  sample_papers.json
docs/: architecture.md
experiments/: run_learning_curve.py
research_radar/: __init__.py  agent.py  cli.py  config.py  simulator.py
research_radar/decision/: __init__.py  bandit.py
research_radar/memory/: __init__.py  store.py
research_radar/perception/: __init__.py  arxiv_source.py
research_radar/reasoning/: __init__.py  encoder.py  explainer.py  llm_client.py
research_radar/safety/: __init__.py  guards.py
tests/: test_research_radar.py
